--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,29 +5,29 @@ api-version: '1.21'
 
 commands:
   Feed:
-    description: Deine Hungerbalken werden komplett gefüllt
+    description: Fills your hunger bar completely
     usage: /feed
     permission: qolcommands.feed
-    permission-message: "§cDu hast keine Berechtigung um diesen Befehl zu nutzen!"
+    permission-message: "§cYou do not have permission to use this command!"
   Heal:
-    description: Deine Herzen werden komplett gefüllt
+    description: Restores your health completely
     usage: /heal
     permission: qolcommands.heal
-    permission-message: "§cDu hast keine Berechtigung um diesen Befehl zu nutzen!"
+    permission-message: "§cYou do not have permission to use this command!"
   Repair:
-    description: Deine Items werden komplett repariert
+    description: Fully repairs your items
     usage: /repair
     permission: qolcommands.repair
-    permission-message: "§cDu hast keine Berechtigung um diesen Befehl zu nutzen!"
+    permission-message: "§cYou do not have permission to use this command!"
   Gamemode:
-    description: Spielmodus wieder wie früher mit Zahlen (und auch mit Namen) änderbar
+    description: Change your game mode like before using numbers (or names)
     usage: /gamemode <0-3|name>
     permission: qolcommands.gamemode
-    permission-message: "§cDu hast keine Berechtigung um diesen Befehl zu nutzen!"
+    permission-message: "§cYou do not have permission to use this command!"
 
 permissions:
   qolcommands.*:
-    description: Erlaubt Zugriff auf alle QOLCommands-Befehle
+    description: Grants access to all QOLCommands commands
     default: op
     children:
       qolcommands.feed: true
